--- a/restricted.conf
+++ b/restricted.conf
@@ -860,4 +860,40 @@ DOMAIN-SUFFIX,zendesk.com,PROXY
 DOMAIN-SUFFIX,zerkalo.io,PROXY
 DOMAIN-SUFFIX,zona.media,PROXY
 
+# OpenAI https://help.openai.com/en/articles/9247338-network-recommendations-for-chatgpt-errors-on-web-and-apps
+DOMAIN-SUFFIX,openai.com,PROXY
+DOMAIN-SUFFIX,auth0.openai.com,PROXY
+DOMAIN-SUFFIX,auth.openai.com,PROXY
+DOMAIN-SUFFIX,setup.auth.openai.com,PROXY
+DOMAIN-SUFFIX,chat.openai.com,PROXY
+DOMAIN-SUFFIX,tcr9i.chat.openai.com,PROXY
+DOMAIN-SUFFIX,chatgpt.com,PROXY
+DOMAIN-SUFFIX,oaiusercontent.com,PROXY
+DOMAIN-SUFFIX,oaistatic.com,PROXY
+DOMAIN-SUFFIX,statsig.com,PROXY
+DOMAIN-SUFFIX,statsigapi.net,PROXY
+DOMAIN-SUFFIX,events.statsigapi.net,PROXY
+DOMAIN-SUFFIX,featuregates.org,PROXY
+DOMAIN-SUFFIX,intercomcdn.com,PROXY
+DOMAIN-SUFFIX,js.intercomcdn.com,PROXY
+DOMAIN-SUFFIX,intercom.io,PROXY
+DOMAIN-SUFFIX,js.stripe.com,PROXY
+DOMAIN-SUFFIX,challenges.cloudflare.com,PROXY
+DOMAIN-SUFFIX,rum.browser-intake-datadoghq.com,PROXY
+DOMAIN-SUFFIX,o33249.ingest.sentry.io,PROXY
+DOMAIN-SUFFIX,ios.chat.openai.com,PROXY
+DOMAIN-SUFFIX,android.chat.openai.com,PROXY
+DOMAIN-SUFFIX,desktop.chat.openai.com,PROXY
+DOMAIN-SUFFIX,prodregistryv2.org,PROXY
+DOMAIN-SUFFIX,featureassets.org,PROXY
+DOMAIN-SUFFIX,setup.workos.com,PROXY
+DOMAIN-SUFFIX,events.launchdarkly.com,PROXY
+DOMAIN-SUFFIX,forwarder.workos.com,PROXY
+DOMAIN-SUFFIX,clientstream.launchdarkly.com,PROXY
+DOMAIN-SUFFIX,app.launchdarkly.com,PROXY
+DOMAIN-SUFFIX,o207216.ingest.sentry.io,PROXY
+DOMAIN-SUFFIX,workos.imgix.net,PROXY
+DOMAIN-SUFFIX,cdn.workos.com,PROXY
+DOMAIN-SUFFIX,images.workoscdn.com,PROXY
+
 FINAL,DIRECT
