--- a/geo-nfqws.conf
+++ b/geo-nfqws.conf
@@ -21,6 +21,7 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,109.95.79.0/24,DIRECT
 
 DOMAIN-SUFFIX,youtube.com,DIRECT
 DOMAIN-SUFFIX,googlevideo.com,DIRECT
