--- a/restricted-nfqws.conf
+++ b/restricted-nfqws.conf
@@ -27,6 +27,13 @@ IP-CIDR,109.95.79.32/28,DIRECT
 IP-CIDR,77.51.246.160/28,DIRECT
 IP-CIDR,94.228.199.88/29,DIRECT
 IP-CIDR,94.228.204.96/29,DIRECT
+IP-CIDR,84.201.185.218/32,DIRECT # prod-nlb
+IP-CIDR,158.160.42.19/32,DIRECT # prod-app01.yc
+IP-CIDR,89.169.160.174/32,DIRECT # prod-app02.yc
+IP-CIDR,51.250.74.192/32,DIRECT # prod-db01.yc
+IP-CIDR,51.250.48.50/32,DIRECT # stage-nlb
+IP-CIDR,51.250.73.58/32,DIRECT # stage-app01.yc
+IP-CIDR,51.250.13.64/32,DIRECT # stage-db01.yc
 
 # OpenAI https://help.openai.com/en/articles/9247338-network-recommendations-for-chatgpt-errors-on-web-and-apps
 DOMAIN-SUFFIX,openai.com,PROXY
