--- a/geo-nfqws.conf
+++ b/geo-nfqws.conf
@@ -35,6 +35,10 @@ IP-CIDR,51.250.48.50/32,DIRECT # stage-nlb
 IP-CIDR,51.250.73.58/32,DIRECT # stage-app01.yc
 IP-CIDR,51.250.13.64/32,DIRECT # stage-db01.yc
 
+# YouTube
+DOMAIN-SUFFIX,youtube.com,DIRECT
+DOMAIN-SUFFIX,googlevideo.com,DIRECT
+
 # OpenAI https://help.openai.com/en/articles/9247338-network-recommendations-for-chatgpt-errors-on-web-and-apps
 DOMAIN-SUFFIX,openai.com,PROXY
 DOMAIN-SUFFIX,auth0.openai.com,PROXY
@@ -71,12 +75,13 @@ DOMAIN-SUFFIX,workos.imgix.net,PROXY
 DOMAIN-SUFFIX,cdn.workos.com,PROXY
 DOMAIN-SUFFIX,images.workoscdn.com,PROXY
 
-DOMAIN-SUFFIX,youtube.com,DIRECT
-DOMAIN-SUFFIX,googlevideo.com,DIRECT
+# Misc
 DOMAIN-SUFFIX,habr.com,PROXY
 
+# Direct
 DOMAIN-SUFFIX,рф,DIRECT
 DOMAIN-SUFFIX,ru,DIRECT
-
 GEOIP,RU,DIRECT
+
+# Default
 FINAL,PROXY
