--- a/geo-nfqws.conf
+++ b/geo-nfqws.conf
@@ -79,6 +79,7 @@ DOMAIN-SUFFIX,images.workoscdn.com,PROXY
 DOMAIN-SUFFIX,habr.com,PROXY
 
 # Direct
+DOMAIN-SUFFIX,yandex.cloud,DIRECT
 DOMAIN-SUFFIX,рф,DIRECT
 DOMAIN-SUFFIX,ru,DIRECT
 GEOIP,RU,DIRECT
